--- a/plugin.xml
+++ b/plugin.xml
@@ -6,7 +6,7 @@
     <description>Provides administrators with a simple direct access interface to their Openfire DB.</description>
     <author>Daniel Henninger</author>
     <version>${project.version}</version>
-    <date>12/17/2020</date>
+    <date>2024-03-15</date>
     <minServerVersion>4.0.0</minServerVersion>
 
     <adminconsole>
